I've made the menu responsive on tablet devices.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img id="logo" src="img/logo.jpg"></a>
+        <a href="index.html" class="logo_container"><img id="logo" src="img/logo.jpg"></a>
         
         <nav id="top-nav">
             <ul>
