I've changed some of the menu links.

--- a/index.html
+++ b/index.html
@@ -2,19 +2,18 @@
 <html>
 <head>
     <meta charset="utf-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ecothunder</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">   
 </head>
 <body>
     <header>
-        <a href="index.html" class="logo_container"><img id="logo" src="img/logo.jpg"></a>
-        
+        <a href="/" class="logo_container"><img id="logo" src="img/logo.jpg"></a>
         <nav id="top-nav">
             <ul>
-                <li><a href="index.html">home</a></li>
+                <li><a href="/">home</a></li>
                 <li><a href="#">about us</a></li>
                 <li><a href="#">contact us</a></li>
                 <li><a href="#">why choose us?</a></li>
@@ -28,7 +27,7 @@
     <div class="clear_header"></div>
     <div class="mobile_menu_drawer">
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="#">About us</a></li>
             <li><a href="#">Contact us</a></li>
             <li><a href="#">Why choose us?</a></li>
@@ -39,6 +38,7 @@
     <section id='main-container'>
         <div id='sandy-box'>
             <div id='sandy-box-text-container'>
+                <h1 hidden>Web Developer based in Gateshead</h1>
                 <h3>Earth-friendly!</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit fermentum sollicitudin nisl, vel purus ante maecenas vulputate placerat netus ultricies lobortis, vitae metus penatibus eget pharetra facilisi conubia mus dapibus. Elementum tincidunt sapien a ad venenatis viverra duis, ornare mi turpis condimentum bibendum habitasse montes, mus pellentesque mi primis nec Senectus portti.</p>
                 <a href="#" class="header_buttons">Take a Tour</a>
@@ -109,7 +109,7 @@
             <input type="email" name="email" placeholder="email address">
             <a href="#" class="box_buttons">Send</a>
             
-            <p id="footer_copy">Copyright &copy; 2019 Ecothunder Incorporated
+            <p id="footer_copy">Copyright &copy; 2020 Ecothunder Incorporated
                 LRP 727 6783 83839 All rights reserved
             </p>
         </div> 
