--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <a href="/" class="logo_container"><img id="logo" src="img/logo.jpg"></a>
         <nav id="top-nav">
             <ul>
-                <li><a href="/">home</a></li>
-                <li><a href="#">about us</a></li>
-                <li><a href="#">contact us</a></li>
-                <li><a href="#">why choose us?</a></li>
-                <li><a href="#">blog</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Contact us</a></li>
+                <li><a href="#">Why choose us?</a></li>
+                <li><a href="#">Blog</a></li>
             </ul>
         </nav>
         <div class="mobile_menu_icon">
